gcc/testsuite/g++.old-deja/g++.jason/rfg22.C
// { dg-do assemble  }
static void f ();		// { dg-error "" } used but not defined

void g ()
{
  f ();
}
